--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,11 @@ github_username:  J0LGER
 
 # Build settings
 markdown: kramdown
-theme: tactile
+remote_theme: pages-themes/minimal@v0.2.0
+#theme: tactile
 plugins:
-  - jekyll-feed
+ - jekyll-feed
+ - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
