--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jolger16
 github_username:  J0LGER
 
+markdown: kramdown
 # Build settings
 remote_theme: pages-themes/tactile@v0.2.0
 #theme: tactile
