--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,9 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: J0LGER
+title: J0LGER - Bloghub
 email: majd.jolger@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Obsessed with breaking stuff | Web & InfoSec. 
-baseurl: "/bloghub/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jolger16
 github_username:  J0LGER
-
-markdown: kramdown
-# Build settings
-remote_theme: pages-themes/tactile@v0.2.0
-#theme: tactile
-plugins:
- - jekyll-remote-theme
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+show_downloads: false
+google_analytics:
+theme: jekyll-theme-tactile
